<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/glossary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/glossary_title_margin_bottom"
        android:text="@string/glossary_title_text"
        android:textSize="@dimen/activity_title_text"
        android:textColor="@color/black"
        custom:font="Pacifico.ttf"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/glossary_title"
        android:layout_above="@+id/glossary_bottom_container"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/glossary_definition_container_margin">

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_circumago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline"
                    android:text="@string/glossary_circumago_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_circumago_definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/glossary_definition_margin_left"
                    android:text="@string/glossary_circumago_definition_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/glossary_definition_container_margin">

            <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_node"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline"
                    android:text="@string/glossary_node_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_node_definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/glossary_definition_margin_left"
                    android:text="@string/glossary_node_definition_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/glossary_definition_container_margin">

            <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_orientable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline"
                    android:text="@string/glossary_orientable_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_orientable_definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/glossary_definition_margin_left"
                    android:text="@string/glossary_orientable_definition_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/glossary_definition_container_margin">

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_permutable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline"
                    android:text="@string/glossary_permutable_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_permutable_definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/glossary_definition_margin_left"
                    android:text="@string/glossary_permutable_definition_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/glossary_definition_container_margin">

            <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_rotatable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline"
                    android:text="@string/glossary_rotatable_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

                <com.apps.scott.circumago.common.view.FontedTextView
                    android:id="@+id/glossary_rotatable_definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/glossary_definition_margin_left"
                    android:text="@string/glossary_rotatable_definition_text"
                    android:textSize="@dimen/activity_text"
                    android:textColor="@android:color/tertiary_text_dark"
                    custom:font="JosefinSans-Bold.ttf"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/glossary_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <fragment android:name="com.apps.scott.circumago.fragment.GamesFragment"
                  android:id="@+id/fragment_games_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>


        <fragment android:name="com.apps.scott.circumago.fragment.BannerAdFragment"
                  android:id="@+id/fragment_banner_ad"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginTop="5dp"/>

    </LinearLayout>

</RelativeLayout>