<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainMenuActivity">


    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_title_margin_bottom"
        android:text="@string/main_menu_title_text"
        android:textSize="@dimen/activity_title_text"
        android:textColor="@color/black"
        custom:font="Pacifico.ttf"/>

    <!--<com.apps.scott.circumago.common.view.FontedTextView-->
        <!--android:id="@+id/main_menu_tutorial_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@+id/main_menu_title"-->
        <!--android:layout_margin="@dimen/activity_buttons_margin"-->
        <!--android:background="@drawable/underline"-->
        <!--android:textColor="@android:color/tertiary_text_dark"-->
        <!--android:text="@string/main_menu_tutorial_text"-->
        <!--android:textSize="@dimen/activity_button_text"-->
        <!--custom:font="JosefinSans-Bold.ttf"/>-->

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/main_menu_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_menu_title"
        android:layout_margin="@dimen/activity_buttons_margin"
        android:background="@drawable/underline"
        android:textColor="@android:color/tertiary_text_dark"
        android:text="@string/main_menu_play_text"
        android:textSize="@dimen/activity_button_text"
        custom:font="JosefinSans-Bold.ttf"/>

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/main_menu_practice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_menu_play_button"
        android:layout_margin="@dimen/activity_buttons_margin"
        android:background="@drawable/underline"
        android:textColor="@android:color/tertiary_text_dark"
        android:text="@string/main_menu_practice_text"
        android:textSize="@dimen/activity_button_text"
        custom:font="JosefinSans-Bold.ttf"/>

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/main_menu_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_menu_practice_button"
        android:layout_margin="@dimen/activity_buttons_margin"
        android:background="@drawable/underline"
        android:textColor="@android:color/tertiary_text_dark"
        android:text="@string/main_menu_settings_text"
        android:textSize="@dimen/activity_button_text"
        custom:font="JosefinSans-Bold.ttf"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <fragment android:name="com.apps.scott.circumago.fragment.GamesFragment"
                  android:id="@+id/fragment_games_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <fragment android:name="com.apps.scott.circumago.fragment.BannerAdFragment"
                  android:id="@+id/fragment_banner_ad"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginTop="5dp"/>

    </LinearLayout>

</RelativeLayout>