<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout         xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      xmlns:custom="http://schemas.android.com/apk/res-auto"
                      tools:context="com.apps.scott.circumago.activity.PostGameActivity">

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/post_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/post_game_title_text"
        android:textSize="@dimen/activity_title_text"
        android:textColor="@color/black"
        custom:font="Pacifico.ttf"/>

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/post_game_replay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/post_game_title"
        android:layout_margin="@dimen/activity_buttons_margin"
        android:background="@drawable/underline"
        android:textColor="@android:color/tertiary_text_dark"
        android:text="@string/post_game_replay_text"
        android:textSize="@dimen/activity_button_text"
        custom:font="JosefinSans-Bold.ttf"/>

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/post_game_new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/post_game_replay_button"
        android:layout_margin="@dimen/activity_buttons_margin"
        android:background="@drawable/underline"
        android:textColor="@android:color/tertiary_text_dark"
        android:text="@string/post_game_new_game_text"
        android:textSize="@dimen/activity_button_text"
        custom:font="JosefinSans-Bold.ttf"/>

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/post_game_main_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/post_game_new_game_button"
        android:layout_margin="@dimen/activity_buttons_margin"
        android:background="@drawable/underline"
        android:textColor="@android:color/tertiary_text_dark"
        android:text="@string/post_game_main_menu_text"
        android:textSize="@dimen/activity_button_text"
        custom:font="JosefinSans-Bold.ttf"/>

    <fragment
        android:name="com.apps.scott.circumago.fragment.ReplayBoardFragment"
        android:id="@+id/fragment_replay_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/post_game_congrats_text"
        android:layout_below="@+id/post_game_main_menu_button"/>

    <com.apps.scott.circumago.common.view.FontedTextView
        android:id="@+id/post_game_congrats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/post_game_bottom_container"
        android:textSize="@dimen/activity_text"
        android:textColor="@color/black"
        custom:font="JosefinSans-SemiBold.ttf"/>

    <LinearLayout
        android:id="@+id/post_game_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <fragment android:name="com.apps.scott.circumago.fragment.GamesFragment"
                  android:id="@+id/fragment_games_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <fragment android:name="com.apps.scott.circumago.fragment.BannerAdFragment"
                  android:id="@+id/fragment_banner_ad"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginTop="5dp"/>

    </LinearLayout>

</RelativeLayout>